Thu May 29 16:32:47 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcscmds.c (RCS_checkin), mkmodules.c (init): Pass -w option to
	"ci", specifying getcaller ().
	* server.h, server.c (CVS_Username): Now extern.
	* subr.c (getcaller): Return CVS_Username if it is set.

Wed May 28 22:31:38 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (update_fileproc): If wrap_merge_is_copy and we would
	like to do a merge, give a fatal error.  See comment for why.
	* sanity.sh (mwrap): New tests, tests for above fix.

Tue May 27 21:59:32 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (stamps): cd to ${TESTDIR} before starting.

Mon May 26 15:31:30 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (handle_mod_time): New function.
	(responses): Add "Mod-time".
	(stored_modtime_valid, stored_modtime): New variables.
	(update_entries): If it is set, change the file's modtime.
	* server.c, server.h (server_modtime): New function.
	* vers_ts.c (Version_TS): Call it.
	* patch.c (patch_fileproc): Add comment about why we don't.
	* sanity.sh (stamps): Added, tests for above fix.

Fri May 16 13:14:30 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* subr.c (free_names): Update documentation to reflect fact that
	free_names is now called to free vectors allocated by expand_wild
	as well	as by line2argv.

	* main.c (main): Use "xstrdup (foo)" not "xstrdup(foo)" as
	specified in HACKING.

Fri May 16 15:10:37 1997  Norbert Kiesel  <nk@cosa.de>

	* modules.c (do_module): initialize optind to 0.  use local copies
 	of optarg's (because they might me freed within free_names).

Thu May 15 11:50:15 1997  Norbert Kiesel  <nk@cosa.de>

	* main.c (main): initialize optind to 0.  use local copies of
	optarg's (because they might me freed within read_cvsrc).

	* cvsrc.c (read_cvsrc): free old argv after constructing a new
	one.  This fixes a memory leak.

	* recurse.c (start_recursion): use free_names() instead of
	reimplementing it
